--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.0-rc.2"
+rocket = {version = "0.5.0-rc.3", features = ["json"]}
 shuttle-rocket = "0.23.0"
 shuttle-runtime = "0.23.0"
 tokio = "1.26.0"
 serde = { version = "1.0.181", features = ["derive"] }
 bincode = "1.3.3"
+
 
 [lib]
 name = "logic"
